--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ title: Home
                 </a> &nbsp; &nbsp; </li> 
             {%- endif -%}
             {%- if site.presentation -%}
-                <li><a role="button" href="{{site.presentation}}" class="btn btn-warning rounded-pill" style="border-color: #D24726;background-color: #D24726">
+                <li><a role="button" href="{{site.presentation}}" class="btn btn-primary rounded-pill" style="border-color: #D24726;background-color: #D24726">
                     <i class="fa fa-file-powerpoint-o"></i> <b> Presentation</b> 
                 </a> &nbsp; &nbsp; </li> 
             {%- endif -%}
