Added PPT to page

--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@ title: Home
                     <i class="far fa-file-pdf"></i><b> Paper</b> 
                 </a> &nbsp; &nbsp; </li> 
             {%- endif -%}
+            {%- if site.presentation -%}
+                <li><a role="button" href="{{site.presentation}}" class="btn btn-primary rounded-pill" style="border-color: #D24726;background-color: #D24726">
+                    <i class="fa fa-file-powerpoint-o"></i> <b> Presentation</b> 
+                </a> &nbsp; &nbsp; </li> 
+            {%- endif -%}
         </ul>
     </div>
 
